--- a/src/app/admin/admin-home/admin-home.component.css
+++ b/src/app/admin/admin-home/admin-home.component.css
@@ -70,10 +70,12 @@
   padding: 0.7rem 1.5rem;
   border-radius: 10px;
   font-weight: 500;
+  font-size: 13px;
   cursor: pointer;
   transition: background 0.2s;
-  height:60px;
-  width:225px;
+  height:40px;
+  width:140px;
+  margin-left: 70px;
 }
 
 .action-buttons button:hover {
