--- a/src/app/admin/admin-payments/admin-payments.component.css
+++ b/src/app/admin/admin-payments/admin-payments.component.css
@@ -12,7 +12,7 @@
   margin-bottom: 20px;
   border-bottom: 2px solid #ffffff;
   padding-bottom: 8px;
-  margin-top : -30px;
+  margin-top: -30px;
 }
 
 .tab-text {
@@ -39,18 +39,6 @@
   border-radius: 2px;
 }
 
-.payments-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.payments-header h2 {
-  color: #7c00a1;
-  font-size: 24px;
-}
-
 .table-search-wrapper {
   width: 100%;
   margin-bottom: 12px;
@@ -72,7 +60,7 @@
 
 .table-container {
   display: block;
-  max-height: 380px; 
+  max-height: 380px;
   overflow-y: auto;
   border: 1px solid #dee2e6;
   border-radius: 0 0 5px 5px;
@@ -80,12 +68,21 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
+.table-container::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+.table-container::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
 .colored-border-table {
   width: 100%;
   border-collapse: collapse;
   font-size: 14px;
   background-color: #fff;
-  min-width: 600px; 
+  min-width: 600px;
 }
 
 .sticky-header th {
@@ -111,16 +108,93 @@
 }
 
 .btn-primary {
-  background-color: #9000ea;
-  border: none;
-  color: white;
-  padding: 6px 12px;
+  font-size: 14px;
+  padding: 8px 16px;
   border-radius: 6px;
-  font-size: 13px;
+  transition: background-color 0.2s ease;
+  border: none;
+  cursor: pointer;
+  background-color: #a205ea;
+  color: white;
+  font-weight: 500;
+}
+
+.btn-primary:hover:enabled {
+  background-color: #8704c7;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.modal {
+  position: relative;
+  background: white;
+  padding: 24px;
+  max-width: 460px;
+  width: 100%;
+  border-radius: 10px;
+  z-index: 1000;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  height: auto ;
+  font-size: 15px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #201f1f;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal h2 {
+  font-size: 20px;
+  margin: 0;
+  font-weight: 600;
+}
+
+.btn-close-modal {
+  margin-top: 15px;
+  padding: 8px 20px;
+  background-color: #e83838;
+  color: white;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
-.btn-primary:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
+.close-btn:hover {
+  color: #555;
+}
+
+.modal-content p {
+  margin: 4px 0;
+  font-size: 15px;
+  text-align: left;
+}
+
+.modal-content strong {
+  font-weight: 600;
+  color: #1f1e1e;
+}
+
+body, .admin-payments-wrapper {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
