--- a/src/app/user/payments/payments.component.css
+++ b/src/app/user/payments/payments.component.css
@@ -253,7 +253,7 @@ button {
   background-color: #ee1919;
 }
 
-/* Animations */
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -317,4 +317,51 @@ button {
   color: red;
   font-size: 12px;
   margin-top: 4px;
+}
+
+.modal-backdrop-1 {
+  position: fixed;
+  top: 0; left: 0;
+  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.payout-details-modal {
+  padding: 20px;
+  background: #ffffff;
+  border-radius: 12px;
+  width: 520px;
+  max-width: 90%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.tab-header {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px 20px;
+  background-color: #ffffff;
+}
+
+.tab {
+  position: relative;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: 600;
+  color:  #a205ea;
+  background-color: transparent;
+  transition: color 0.3s ease;
+}
+
+.tab:hover {
+  color: #a205ea;
+}
+
+.tab.active {
+  color: #ffffff;
+  background-color: #a205ea;
+  border-radius: 9px;
 }
